--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/main",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "demo": "ts-node src/demo"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
   },
   "prettier": {
     "printWidth": 100
+  },
+  "dependencies": {
+    "json5": "^2.2.3"
   }
 }
